examples/test/testpolicy17927.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17927
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key21: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value15
          key43: value13
      podSelector:
        matchLabels:
          key3: value41
          key35: value45
          key25: value15
